--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Portfolio | Matías Benavides</title>
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
 <header>
@@ -164,5 +166,6 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
