Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <section id="sobremi" class="sobre-card">
   <h2>Sobre mí</h2>
   <p> 1 septiembre 2025 estudios autodidacta</p>
-  <p>desarrollador <strong>Front-End</strong> apasionado por crear páginas web </p>
+  <p>desarrollador <strong>Front-End y Back-end</strong> apasionado por crear páginas web </p>
   <p><strong>Ubicación:</strong> Chile | <strong>Edad:</strong> 15 años | <strong>Disponibilidad:</strong> Trabajo remoto</p>
   <p>Mi mayor habilidad es la <strong>capacidad de aprendizaje y versatilidad</strong>, lo que me permite adaptarme rápidamente y mejorar continuamente.</p>
 </section>
@@ -89,19 +89,19 @@
     <div class="front-end">
       <h3>Certificado Profesional de Front-End Developer</h3>
       <p>Coursera – Universidad de Meta. HTML, CSS, JavaScript, React y responsive design.</p>
-      <a href="https://coursera.org/...tu-certificado..." target="_blank">Ver certificado de Front-End</a>
+      <a href="https://coursera.org/...tu-certificado..." target="_blank">Ver certificado de Front-end</a>
     </div>
 
     <div class="front-end">
       <h3>Certificado Profesional de Back-End Developer</h3>
       <p>Coursera – Universidad de Meta Node.js, Express, bases de datos y APIs.</p>
-      <a href="https://coursera.org/...tu-certificado..." target="_blank">Ver certificado de Front-End</a>
+      <a href="https://coursera.org/...tu-certificado..." target="_blank">Ver certificado de Back-end</a>
     </div>
 
     <div class="analitica">
       <h3>Certificado Profesional de Analítica de Datos</h3>
       <p>Coursera – Google Análisis de datos, SQL, hojas de cálculo y visualización.</p>
-       <a href="https://coursera.org/...tu-certificado..." target="_blank">Ver certificado de Front-End</a>
+       <a href="https://coursera.org/...tu-certificado..." target="_blank">Ver certificado de analítica de datos</a>
     </div>
 
 </section>
@@ -155,7 +155,7 @@
   <div class="footer-links">
     <a href="https://github.com/matiasbenavides-bot"  target="_blank">GitHub</a>
     <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
-    <a href="mailto:tucorreo@gmail.com">Email</a>
+    <a href="mailto:matiasbenavidesmarambio@gmail.com">Email</a>
   </div>
 
   <p class="frase">“Transformo ideas en experiencias digitales.”</p>
