--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 <section id="inicio" class="hero">
   <div class="hero-content">
     <h1>Hola, soy Matías Benavides</h1>
-    <p>Desarrollador Front-End especializado en crear experiencias web elegantes y modernas con HTML, CSS y JavaScript.</p>
+    <p>Desarrollador Front-end y Back-end especializado en crear experiencias web elegantes y modernas con HTML, CSS y JavaScript.</p>
     <div class="hero-buttons">
       <a href="#proyectos" class="btn">Ver Proyectos</a>
       <a href="#" class="btn btn-outline">Descargar CV</a>
     </div>
     <div class="social">
-      <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/matiasbenavides-bot" target="_blank"><i class="fab fa-github"></i></a>
       <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="mailto:correo@ejemplo.com"><i class="fas fa-envelope"></i></a>
     </div>
@@ -166,6 +166,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
