--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 <section id="inicio" class="hero">
   <div class="hero-content">
     <h1>Hola, soy Matías Benavides</h1>
-    <p>Desarrollador Front-end y Back-end especializado en crear experiencias web elegantes y modernas con HTML, CSS y JavaScript.</p>
+    <p>Desarrollador Front-end especializado en crear experiencias web elegantes y modernas con HTML, CSS y JavaScript.</p>
     <div class="hero-buttons">
-      <a href="#proyectos" class="btn">Ver Proyectos</a>
-      <a href="#" class="btn btn-outline">Descargar CV</a>
+
     </div>
     <div class="social">
       <a href="https://github.com/matiasbenavides-bot" target="_blank"><i class="fab fa-github"></i></a>
@@ -44,8 +43,8 @@
 
 <section id="sobremi" class="sobre-card">
   <h2>Sobre mí</h2>
-  <p> 1 septiembre 2025 estudios autodidacta</p>
-  <p>desarrollador <strong>Front-End y Back-end</strong> apasionado por crear páginas web </p>
+  <p> 1 septiembre 2025 estudios autodidacta y estudiando desde coursera </p>
+  <p>desarrollador <strong>Front-End</strong> apasionado por crear páginas web </p>
   <p><strong>Ubicación:</strong> Chile | <strong>Edad:</strong> 15 años | <strong>Disponibilidad:</strong> Trabajo remoto</p>
   <p>Mi mayor habilidad es la <strong>capacidad de aprendizaje y versatilidad</strong>, lo que me permite adaptarme rápidamente y mejorar continuamente.</p>
 </section>
@@ -153,6 +152,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
