Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
     <h1>Hola, soy Matías Benavides</h1>
     <p>Desarrollador Front-end especializado en crear experiencias web elegantes y modernas con HTML, CSS y JavaScript.</p>
     <div class="hero-buttons">
-
     </div>
-    <div class="social">
-      <a href="https://github.com/matiasbenavides-bot" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="mailto:correo@ejemplo.com"><i class="fas fa-envelope"></i></a>
-    </div>
+   <div class="footer-links">
+    <a href="https://github.com/matiasbenavides-bot"  target="_blank">GitHub</a>
+    <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+    <a href="mailto:matiasbenavidesmarambio@gmail.com">Email</a>
   </div>
 </section>
 
@@ -152,6 +150,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
