Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   <div class="card">
 <h3>muebleria betsi</h3>
 <p>Sitio web responsive para mueblería con diseño moderno y catálogo de productos.</p>
- <a href="https://tu-pagina-heavyhome.com" target="_blank">Ver Página</a>
-    <a href="https://github.com/tuusuario/heavyhome" target="_blank">Código</a>
+ <a href="https://matiasbenavides-bot.github.io/muebleria-betsi/" target="_blank">Ver Página</a>
+    <a href="https://github.com/matiasbenavides-bot/muebleria-betsi.git" target="_blank">Código</a>
   </div>
   <div class="card">
 <h3>Heavy Fit</h3>
@@ -150,6 +150,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
