--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <a href="https://github.com/tuusuario/heavyhome" target="_blank">Código</a>
   </div>
   <div class="card">
-<h3>Kroma Gems</h3>
- <p>Catálogo interactivo con filtros, búsqueda y carrito de compras funcional.</p>
+<h3>Taller de reparaciones el Jota </h3>
+ <p>sitio web estilo responsive diseñado para presentar una microempresa.</p>
   <a href="https://tu-pagina-heavyhome.com" target="_blank">Ver Página</a>
     <a href="https://github.com/tuusuario/heavyhome" target="_blank">Código</a>
   </div>
@@ -150,6 +150,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
