Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
   <div class="card">
 <h3>Taller de reparaciones el Jota </h3>
  <p>sitio web estilo responsive diseñado para presentar una microempresa.</p>
-  <a href="https://tu-pagina-heavyhome.com" target="_blank">Ver Página</a>
-    <a href="https://github.com/tuusuario/heavyhome" target="_blank">Código</a>
+  <a href="https://matiasbenavides-bot.github.io/taller-el-jota/" target="_blank">Ver Página</a>
+    <a href="https://github.com/matiasbenavides-bot/taller-el-jota.git" target="_blank">Código</a>
   </div>
  </div>
 </section>
