Fix HTML formatting and update footer links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </div>
    <div class="footer-links">
     <a href="https://github.com/matiasbenavides-bot"  target="_blank">GitHub</a>
-    <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+    <a href="www.linkedin.com/in/
+matias-benavides-969584386
+" target="_blank">LinkedIn</a>
     <a href="mailto:matiasbenavidesmarambio@gmail.com">Email</a>
   </div>
 </section>
@@ -150,6 +152,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
