--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
     </div>
    <div class="footer-links">
     <a href="https://github.com/matiasbenavides-bot"  target="_blank">GitHub</a>
-    <a href="www.linkedin.com/in/
-matias-benavides-969584386
-" target="_blank">LinkedIn</a>
+    <a href= "https://www.linkedin.com/in/matias-benavides-969584386" target="_blank">LinkedIn</a>
     <a href="mailto:matiasbenavidesmarambio@gmail.com">Email</a>
   </div>
 </section>
@@ -55,6 +53,7 @@ matias-benavides-969584386
   <button class="css">Css</button>
   <button class="Html">Html</button>
   <button class="JavaScript">JavaScript</button>
+      <button class="React">React</button>
   </div>
 </section>
 
@@ -152,6 +151,7 @@ matias-benavides-969584386
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
