--- a/index.html
+++ b/index.html
@@ -137,12 +137,13 @@
 <footer class="footer">
   <p>© 2025 Matías Benavides | Desarrollador Web Front-End</p>
   
+  
   <div class="footer-links">
     <a href="https://github.com/matiasbenavides-bot"  target="_blank">GitHub</a>
-    <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+    <a href= "https://www.linkedin.com/in/matias-benavides-969584386" target="_blank">LinkedIn</a>
     <a href="mailto:matiasbenavidesmarambio@gmail.com">Email</a>
   </div>
-
+  
   <p class="frase">“Transformo ideas en experiencias digitales.”</p>
 </footer>
 
@@ -151,6 +152,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
