--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h2>Sobre mí</h2>
   <p> 1 septiembre 2025 estudios autodidacta y estudiando desde coursera </p>
   <p>desarrollador <strong>Front-End</strong> apasionado por crear páginas web </p>
-  <p><strong>Ubicación:</strong> Chile | <strong>Edad:</strong> 15 años | <strong>Disponibilidad:</strong> Trabajo remoto</p>
+  <p><strong>Ubicación:</strong> Chile | <strong>Edad:</strong> 16 años | <strong>Disponibilidad:</strong> Trabajo remoto</p>
   <p>Mi mayor habilidad es la <strong>capacidad de aprendizaje y versatilidad</strong>, lo que me permite adaptarme rápidamente y mejorar continuamente.</p>
 </section>
 
@@ -53,7 +53,7 @@
   <button class="css">Css</button>
   <button class="Html">Html</button>
   <button class="JavaScript">JavaScript</button>
-      <button class="React">React</button>
+      <button class="Html">React</button>
   </div>
 </section>
 
@@ -152,6 +152,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
