--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <section id="sobremi" class="sobre-card">
   <h2>Sobre mí</h2>
-  <p> 1 septiembre 2025 estudios autodidacta y estudiando desde coursera </p>
+  <p>estudiando desde coursera </p>
   <p>desarrollador <strong>Front-End</strong> apasionado por crear páginas web </p>
   <p><strong>Ubicación:</strong> Chile | <strong>Edad:</strong> 16 años | <strong>Disponibilidad:</strong> Trabajo remoto</p>
   <p>Mi mayor habilidad es la <strong>capacidad de aprendizaje y versatilidad</strong>, lo que me permite adaptarme rápidamente y mejorar continuamente.</p>
@@ -152,6 +152,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
