Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
   <div class="card">
 <h3>Heavy Fit</h3>
-   <p>App web para registrar y seguir entrenamientos con series, repeticiones e intensidad.</p>
+   <p> web para registrar y seguir entrenamientos con series y repeticiones.</p>
     <a href="https://tu-pagina-heavyhome.com" target="_blank">Ver Página</a>
     <a href="https://github.com/tuusuario/heavyhome" target="_blank">Código</a>
   </div>
@@ -152,6 +152,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
