--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
   <div class="card">
 <h3>Heavy Fit</h3>
    <p> web para registrar y seguir entrenamientos con series y repeticiones.</p>
-    <a href="https://tu-pagina-heavyhome.com" target="_blank">Ver Página</a>
-    <a href="https://github.com/tuusuario/heavyhome" target="_blank">Código</a>
+    <a href="https://matiasbenavides-bot.github.io/heavyfit/" target="_blank">Ver Página</a>
+    <a href="https://github.com/matiasbeanvides-bot/heavyfit/" target="_blank">Código</a>
   </div>
   <div class="card">
 <h3>Taller de reparaciones el Jota </h3>
@@ -152,6 +152,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
