--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <button class="css">Css</button>
   <button class="Html">Html</button>
   <button class="JavaScript">JavaScript</button>
-    
+    <button class="React">React</button>
   </div>
 </section>
 
@@ -152,6 +152,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
