--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
   <button class="Html">Html</button>
   <button class="JavaScript">JavaScript</button>
     <button class="React">React</button>
+     <button class="git">Git</button>
+     <button class="github">GitHub</button>
+     <button class="UX/UI">UX/UI</button>
+    
   </div>
 </section>
 
@@ -152,6 +156,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
