--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
   <button class="css">Css</button>
   <button class="Html">Html</button>
   <button class="JavaScript">JavaScript</button>
-    <button class="React">React</button>
-     <button class="git">Git</button>
-     <button class="github">GitHub</button>
-     <button class="UX/UI">UX/UI</button>
+  <button class="React">React</button>
+  <button class="git">Git</button>
+  <button class="github">GitHub</button>
+  <button class="UXUI">UX/UI</button>
     
   </div>
 </section>
@@ -156,6 +156,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
