--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
 
 <section id="sobremi" class="sobre-card">
   <h2>Sobre mí</h2>
-  <p>estudiando desde coursera </p>
-  <p>desarrollador <strong>Front-End</strong> apasionado por crear páginas web </p>
-  <p><strong>Ubicación:</strong> Chile | <strong>Edad:</strong> 16 años | <strong>Disponibilidad:</strong> Trabajo remoto</p>
-  <p>Mi mayor habilidad es la <strong>capacidad de aprendizaje y versatilidad</strong>, lo que me permite adaptarme rápidamente y mejorar continuamente.</p>
+  <p>Desarrollador <strong>Front-End</strong> en formación. </p>
+  <p>Creo sitios web <strong>modernos</strong>, <strong>responsivos</strong> y enfocados en la experiencia del usuario.</p>
+  <p>Aprendizaje constante y disponibilidad total para <strong>trabajo remoto.</strong></p>
 </section>
-
+  
 <section id="habilidades" class="habilidades">
   <h2>Habilidades</h2>
   <div class="btns">
@@ -156,6 +155,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
