--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Portfolio | Matías Benavides</title>
   <link rel="stylesheet" href="style.css">
-  
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -155,6 +155,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
