--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 <section id="habilidades" class="habilidades">
   <h2>Habilidades</h2>
   <div class="btns">
-  <button class="css">Css</button>
-  <button class="Html">Html</button>
-  <button class="JavaScript">JavaScript</button>
-  <button class="React">React</button>
-  <button class="git">Git</button>
-  <button class="github">GitHub</button>
-  <button class="UXUI">UX/UI</button>
-    
+<p align="left">
+  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" width="40" height="40" alt="HTML5" />
+  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" width="40" height="40" alt="CSS3" />
+  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="40" height="40" alt="JavaScript" />
+  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" width="40" height="40" alt="React" />
+  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" width="40" height="40" alt="Node.js" />
+  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" width="40" height="40" alt="Git" />
+</p>
   </div>
 </section>
 
@@ -155,6 +155,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
