--- a/index.html
+++ b/index.html
@@ -84,15 +84,28 @@
  </div>
 </section>
 
+
 <section id="estudios" class="estudios">
   <h2>Estudios y Formación</h2>
 
     <div class="front-end">
-      <h3>Certificado Profesional de Front-End Developer</h3>
-      <p>Coursera – Universidad de Meta. HTML, CSS, JavaScript, React y responsive design.</p>
-      <a href="https://coursera.org/...tu-certificado..." target="_blank">Ver certificado de Front-end</a>
+
+      <h3>Certificado Profesional HTML, CSS</h3>
+      <p>Coursera – Universidad de Meta. HTML and CSS</p>
+      <a href="https://coursera.org/share/c807daf476c369c59a84e6bab344058a">Certificado</a>
+<br>
+<br>
+      <h3>Certificado Profesional JavaScript</h3>
+      <p>Coursera – Universidad de Meta. JavaScript</p>
+      <a href="https://coursera.org/share/2c333190f278ec793fe16985c7221f26">Certificado</a>
+    <br>
+    <br>
+    <h3>Certificado Profesional Control de versiones</h3>
+    <p>Coursera – Universidad de Meta. Control de versiones</p>
+    <a href="https://coursera.org/share/de9d5e954141fb006c2525703b02a1c4">Certificado</a>
     </div>
 </section>
+
 
 
 <section id="contacto" class="contacto">
@@ -155,6 +168,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
