--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
  <div class="card-container">
   <div class="card">
 <h3>muebleria betsi</h3>
-<p>Sitio web responsive para mueblería con diseño moderno y catálogo de productos.</p>
+<p>Sitio web responsive para mueblería con diseño moderno.</p>
  <a href="https://matiasbenavides-bot.github.io/muebleria-betsi/" target="_blank">Ver Página</a>
     <a href="https://github.com/matiasbenavides-bot/muebleria-betsi.git" target="_blank">Código</a>
   </div>
   <div class="card">
-<h3>Heavy Fit</h3>
-   <p> web para registrar y seguir entrenamientos con series y repeticiones.</p>
-    <a href="https://matiasbenavides-bot.github.io/heavyfit/" target="_blank">Ver Página</a>
-    <a href="https://github.com/matiasbeanvides-bot/heavyfit/" target="_blank">Código</a>
+<h3>nikole</h3>
+   <p>sitio web personal</p>
+    <a href="https://matiasbenavides-bot.github.io/mi-niko/" target="_blank">Ver Página</a>
+    <a href="https://github.com/matiasbenavides-bot/mi-niko.git" target="_blank">Código</a>
   </div>
   <div class="card">
 <h3>Taller de reparaciones el Jota </h3>
@@ -168,6 +168,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
