--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
   </div>
   <div class="card">
 <h3>nikole</h3>
-   <p>sitio web personal</p>
+   <p>Un sitio web personalizado. Incluye secciones interactiva combinando HTML, CSS y JavaScript.
+
+Tecnologías: HTML, CSS, JavaScript</p>
     <a href="https://matiasbenavides-bot.github.io/mi-niko/" target="_blank">Ver Página</a>
     <a href="https://github.com/matiasbenavides-bot/mi-niko.git" target="_blank">Código</a>
   </div>
@@ -168,6 +170,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
