--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <div class="card">
 <h3>nikole</h3>
-   <p>Un sitio web personalizado. Incluye secciones interactiva combinando HTML, CSS y JavaScript.
+   <p>Un sitio web personalizado. Incluye secciones interactiva.
 
 Tecnologías: HTML, CSS, JavaScript</p>
     <a href="https://matiasbenavides-bot.github.io/mi-niko/" target="_blank">Ver Página</a>
@@ -170,6 +170,7 @@ Tecnologías: HTML, CSS, JavaScript</p>
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
