--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
   </div>
   <div class="card">
 <h3>nikole</h3>
-   <p>Un sitio web personalizado. Incluye secciones interactiva.
-
-Tecnologías: HTML, CSS, JavaScript</p>
+   <p>Un sitio web personalizado. Incluye secciones interactiva.</p>
     <a href="https://matiasbenavides-bot.github.io/mi-niko/" target="_blank">Ver Página</a>
     <a href="https://github.com/matiasbenavides-bot/mi-niko.git" target="_blank">Código</a>
   </div>
@@ -170,6 +168,7 @@ Tecnologías: HTML, CSS, JavaScript</p>
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
