--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section id="inicio" class="hero">
   <div class="hero-content">
     <h1>Hola, soy Matías Benavides</h1>
-    <p>Desarrollador Front-end especializado en crear experiencias web elegantes y modernas con HTML, CSS y JavaScript.</p>
+    <p>Desarrollador de <strong>Front-End</strong> especializado en crear experiencias web elegantes y modernas con HTML, CSS y JavaScript.</p>
     <div class="hero-buttons">
     </div>
    <div class="footer-links">
@@ -168,6 +168,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
