--- a/index.html
+++ b/index.html
@@ -60,30 +60,40 @@
   </div>
 </section>
 
+
 <section id="proyectos" class="proyectos">
   <h2>Proyectos</h2>
- <div class="card-container">
-  <div class="card">
-<h3>muebleria betsi</h3>
-<p>Sitio web responsive para mueblería con diseño moderno.</p>
- <a href="https://matiasbenavides-bot.github.io/muebleria-betsi/" target="_blank">Ver Página</a>
-    <a href="https://github.com/matiasbenavides-bot/muebleria-betsi.git" target="_blank">Código</a>
+
+  <div class="card-container">
+    <div class="card active">
+      <h3>Mueblería Betsi</h3>
+      <p>Sitio web responsive para mueblería con diseño moderno.</p>
+      <a href="https://matiasbenavides-bot.github.io/muebleria-betsi/" target="_blank">Ver Página</a>
+      <a href="https://github.com/matiasbenavides-bot/muebleria-betsi.git" target="_blank">Código</a>
+    </div>
+
+    <div class="card">
+      <h3>Nikole</h3>
+      <p>Un sitio web personalizado. Incluye secciones interactivas.</p>
+      <a href="https://matiasbenavides-bot.github.io/mi-niko/" target="_blank">Ver Página</a>
+      <a href="https://github.com/matiasbenavides-bot/mi-niko.git" target="_blank">Código</a>
+    </div>
+
+    <div class="card">
+      <h3>Taller de reparaciones El Jota</h3>
+      <p>Sitio web estilo responsive diseñado para presentar una microempresa.</p>
+      <a href="https://matiasbenavides-bot.github.io/taller-el-jota/" target="_blank">Ver Página</a>
+      <a href="https://github.com/matiasbenavides-bot/taller-el-jota.git" target="_blank">Código</a>
+    </div>
   </div>
-  <div class="card">
-<h3>nikole</h3>
-   <p>Un sitio web personalizado. Incluye secciones interactiva.</p>
-    <a href="https://matiasbenavides-bot.github.io/mi-niko/" target="_blank">Ver Página</a>
-    <a href="https://github.com/matiasbenavides-bot/mi-niko.git" target="_blank">Código</a>
+
+  <div class="buttons">
+    <button id="prev">⟨</button>
+    <button id="next">⟩</button>
   </div>
-  <div class="card">
-<h3>Taller de reparaciones el Jota </h3>
- <p>sitio web estilo responsive diseñado para presentar una microempresa.</p>
-  <a href="https://matiasbenavides-bot.github.io/taller-el-jota/" target="_blank">Ver Página</a>
-    <a href="https://github.com/matiasbenavides-bot/taller-el-jota.git" target="_blank">Código</a>
-  </div>
- </div>
 </section>
 
+  
 
 <section id="estudios" class="estudios">
   <h2>Estudios y Formación</h2>
@@ -168,6 +178,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
