--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
     <h3>Certificado Profesional Control de versiones</h3>
     <p>Coursera – Universidad de Meta. Control de versiones</p>
     <a href="https://coursera.org/share/de9d5e954141fb006c2525703b02a1c4">Certificado</a>
+      <br>
+      <br>
+      <h3>Certificado Profesional Basic React</h3>
+    <p>Coursera – Universidad de Meta. Basic React</p>
+    <a href="https://coursera.org/share/6c093f1db9a09c7a5ef54b2a23df1741">Certificado</a>
     </div>
 </section>
 
@@ -178,6 +183,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
