--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
       <a href="https://matiasbenavides-bot.github.io/taller-el-jota/" target="_blank">Ver Página</a>
       <a href="https://github.com/matiasbenavides-bot/taller-el-jota.git" target="_blank">Código</a>
     </div>
+
+
+    <div class="card">
+      <h3>PowerTrack</h3>
+      <p>App web para anotar progresiones y rutinas de entrenamientos</p>
+      <a href="https://matiasbenavides-bot.github.io/powertrack/" target="_blank">Ver Página</a>
+      <a href="https://github.com/matiasbenavides-bot/powertrack.git" target="_blank">Código</a>
+    </div>
+    
   </div>
 
   <div class="buttons">
@@ -183,6 +192,7 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
